--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 pandas
-numpy
+numpy==1.24.3
 scikit-learn
 matplotlib
-tensorflow-cpu=2.11.0
+tensorflow-cpu==2.11.0
 keras-tuner
 openpyxl
 seaborn
