--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas==2.3.0
+pandas==2.2.2
 numpy==1.24.3
-scikit-learn==1.7.0
-matplotlib==3.10.3
-tensorflow-cpu==2.11.0
+scikit-learn==1.3.2
+matplotlib==3.8.4
+tensorflow-cpu==2.13.0
 keras-tuner==1.4.7
-openpyxl==3.1.5
-seaborn==0.13.2
+openpyxl==3.1.2
+protobuf==3.20.3
+streamlit==1.28.0
 h5py==3.8.0
-protobuf==3.19.6
